# quantale_semiring_v2

./: .gitignore  ARCHITECTURE.md  Cargo.toml  GOAL.md  LICENSE  Makefile  PENDING.delete.legacy.code.md  PENDING.gpu.ingress.md  PENDING.gpu.native.orchestration.md  PENDING.md  PURPOSE.md  README.md  USAGE.md  benchmark.sh  build.rs  fix.md  operators.json  pending.async.streamer.md  pending.md  pending.streaming.quantale.md  pending.streaming.to.fix.md  pending.v2.md  plan.declarative.md  plan.gpu.native.seq.par.choice.star.md  plan.md  plan.topology.md  plan.v2.md  plan.v3.md  plan_invariants.md  problem.md  readme.test.md  run.sh
assets/: abstract_device.generated.json  analysis_decision_schema.json  analysis_plan.py  call_llm.py  call_llm_templates.json  commit.py  exploration.json  fusion_hf.generated.json  fusion_hf.stubs.cu  input.py  learn.py  learning_policy.json  lock_policy.json  market_analysis.json  market_feed.json  market_feed.py  math.source.json  memory.py  node_contracts.json  operators.generated.json  operators.json  patterns.compiled.json  patterns.json  patterns.source.json  policy.json  receipt.json  regions.hot.json  reload_policy.json  rule_delta.json  runtime_context.json  runtime_invariants.json  runtime_policy.json  side_effect_policy.json  topology.control.json  topology.fusion.json  topology.generated.json  topology.hot.json  topology.json  topology.source.json  topology.source.ll_2070l.json  (+2 more)
cuda/: quantale_world.cu  trading_execution_kernels.cu
docs/: 01_leverage_ranking.md  02_phase_roadmap.md  03_algorithm_catalog.md  README.md  (+10 more)
(+167 files in other folders)
