[package]
name = "quantale_semiring_v2"
version = "0.1.0"
edition = "2024"
default-run = "quantale_semiring_v2"
license = "Apache-2.0"

[lib]
doctest = false

[workspace]
members = [".", "crates/topology_core"]
resolver = "3"

[features]
default = ["cuda"]
cuda = []
# Restores the pre-Phase-9 CPU par hot-path dispatch and CPU receipt queue.
# Not included in `default`; the GPU-native orchestration path is the default.
legacy-cpu-orchestration = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
topology_core = { path = "crates/topology_core" }
cudarc = { version = "0.11", features = ["nvrtc", "cuda-12050"] }

[build-dependencies]
